--- a/eureka-service/pom.xml
+++ b/eureka-service/pom.xml
@@ -40,6 +40,18 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>8.0.1.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>jakarta.el</artifactId>
+			<version>4.0.2</version>
+		</dependency>
+
 		<!-- Lombok (Giảm Boilerplate Code) -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
