--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -3,9 +3,9 @@ name: Build, Push, Cleanup, and Deploy to AWS EKS
 on:
   push:
     branches:
-      - master  # Tự động chạy khi có commit vào nhánh master
+      - master  # Auto chạy khi có commit vào nhánh master
   schedule:
-    - cron: '0 0 * * *'  # Cleanup hàng ngày vào 00:00 UTC
+    - cron: '0 0 * * *'  # Chạy cleanup hàng ngày vào 00:00 UTC
   workflow_dispatch:  # Cho phép chạy thủ công nếu cần
 
 jobs:
@@ -15,18 +15,16 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build and Push Docker Compose Services
+      - name: Build and Push Docker Images
         run: |
           SERVICES=("eureka-service" "api-gateway" "auth-service" "product-service" "user-service")
           for SERVICE in "${SERVICES[@]}"; do
             echo "Building and pushing: huutai2403/$SERVICE:latest"
-            docker build -t huutai2403/$SERVICE:latest -f $SERVICE/Dockerfile .
+            docker build -t huutai2403/$SERVICE:latest --file $SERVICE/Dockerfile $SERVICE
             docker push huutai2403/$SERVICE:latest
           done
 
@@ -35,13 +33,13 @@ jobs:
 
   cleanup:
     runs-on: ubuntu-latest
-    needs: build-and-push
+    needs: build-and-push  # Cleanup sau khi build & push thành công
 
     steps:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Delete old images (Chỉ giữ lại 3 phiên bản mới nhất)
+      - name: Delete old images (giữ lại 3 phiên bản mới nhất)
         run: |
           SERVICES=("eureka-service" "api-gateway" "auth-service" "product-service" "user-service")
           TAGS_TO_KEEP=3
@@ -64,7 +62,7 @@ jobs:
 
   deploy-to-eks:
     runs-on: ubuntu-latest
-    needs: build-and-push
+    needs: build-and-push  # Chạy deploy sau khi build & push thành công
 
     steps:
       - name: Configure AWS credentials
@@ -72,32 +70,24 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-southeast-1
+          aws-region: ap-southeast-1  # Singapore
 
-      - name: Install dependencies (kubectl, kompose)
+      - name: Install kubectl
         run: |
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-          chmod +x kubectl && sudo mv kubectl /usr/local/bin/
-          curl -L https://github.com/kubernetes/kompose/releases/download/v1.26.1/kompose-linux-amd64 -o kompose
-          chmod +x kompose && sudo mv kompose /usr/local/bin/
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/
 
       - name: Update kubeconfig
         run: aws eks update-kubeconfig --name my-cluster --region ap-southeast-1
 
-      - name: Convert Docker Compose to Kubernetes Manifests
-        run: |
-          mkdir -p k8s-manifests
-          kompose convert -f docker-compose.yml -o k8s-manifests/
-
-      - name: Apply Kubernetes Manifests to EKS
-        run: |
-          kubectl apply -f k8s-manifests/
-
-      - name: Update Kubernetes Deployments with Latest Images
+      - name: Deploy Services to AWS EKS
         run: |
           SERVICES=("eureka-service" "api-gateway" "auth-service" "product-service" "user-service")
           for SERVICE in "${SERVICES[@]}"; do
+            echo "Applying deployment for $SERVICE..."
+            kubectl apply -f k8s/$SERVICE-deployment.yaml || echo "⚠️ Lỗi khi apply $SERVICE, kiểm tra lại YAML"
             echo "Updating Kubernetes Deployment for $SERVICE..."
-            kubectl set image deployment/$SERVICE $SERVICE=huutai2403/$SERVICE:latest -n default
-            kubectl rollout restart deployment/$SERVICE -n default
+            kubectl set image deployment/$SERVICE $SERVICE=huutai2403/$SERVICE:latest -n default || echo "⚠️ Lỗi khi update image $SERVICE"
+            kubectl rollout restart deployment $SERVICE -n default
           done
